--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -108,7 +108,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Profile"
+                    android:text="Ride"
                     android:layout_marginTop="35dp"
                     android:layout_marginLeft="30dp"
                     android:textColor="#000"
@@ -117,12 +117,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Edit your Profile"
+                    android:text="Add/delete ride"
                     android:layout_marginTop="58dp"
                     android:layout_marginLeft="30dp"
                     android:textSize="12sp" />
 
                 <ImageView
+                    android:id="@+id/add_ride_field"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:elevation="40px"
