--- a/app/src/main/res/layout/activity_add_ride.xml
+++ b/app/src/main/res/layout/activity_add_ride.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_margin="16dp"
+    android:layout_margin="26dp"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".AddRide">
@@ -18,6 +18,7 @@
         android:layout_margin="10dp" />
 
     <EditText
+        android:layout_below="@+id/edit_text_dist"
         android:id="@+id/edit_text_earn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,6 +28,7 @@
         android:layout_margin="10dp" />
 
     <EditText
+        android:layout_below="@+id/edit_text_earn"
         android:id="@+id/edit_text_dur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,18 +38,20 @@
         android:layout_margin="10dp" />
 
     <Button
+        android:layout_below="@+id/edit_text_dur"
         android:id="@+id/post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="30dp"
         android:text="Post to server"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="30dp"
         android:text="Delete Table"
-        android:layout_gravity="center_horizontal"/>
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
+</RelativeLayout>
