--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -63,7 +63,7 @@
                 android:id="@+id/earnings_month_act_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="$0.00"
+                android:text="$0.00"
                 android:layout_marginTop="35dp"
                 android:textColor="#000"
                 android:layout_marginLeft="30dp"
