--- a/app/src/main/res/layout/activity_ride.xml
+++ b/app/src/main/res/layout/activity_ride.xml
@@ -33,6 +33,7 @@
                 android:orientation="vertical">
 
         <TextView
+            android:id="@+id/ride_id"
            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -42,6 +43,7 @@
             android:textStyle="bold"/>
 
             <TextView
+                android:id="@+id/datetime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
